--- a/Woopons/Storyboards/Home.storyboard
+++ b/Woopons/Storyboards/Home.storyboard
@@ -1393,7 +1393,7 @@ unlimited WOO-PONS per month?</string>
                                                 <rect key="frame" x="15" y="20" width="305" height="98.5"/>
                                                 <string key="text">Please note: Once clicked, this can not be reversed. 
 Your Woo-Pon will stay active for 60 seconds. 
-Please only redeem at checkout with worker present."</string>
+Please only redeem at checkout with worker present.</string>
                                                 <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="12"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -1696,8 +1696,8 @@ Please only redeem at checkout with worker present."</string>
                         <constraints>
                             <constraint firstItem="j78-hX-3Qk" firstAttribute="leading" secondItem="QRq-7E-cfa" secondAttribute="leading" id="7I6-0a-qJn"/>
                             <constraint firstItem="UUd-Rx-cbN" firstAttribute="trailing" secondItem="j78-hX-3Qk" secondAttribute="trailing" id="B1I-HY-jRu"/>
+                            <constraint firstAttribute="bottom" secondItem="j78-hX-3Qk" secondAttribute="bottom" id="PBe-H8-Hpj"/>
                             <constraint firstItem="j78-hX-3Qk" firstAttribute="top" secondItem="QRq-7E-cfa" secondAttribute="top" id="VNf-b3-RWR"/>
-                            <constraint firstItem="UUd-Rx-cbN" firstAttribute="bottom" secondItem="j78-hX-3Qk" secondAttribute="bottom" id="ePw-lf-YpN"/>
                         </constraints>
                     </view>
                 </viewController>
