--- a/Woopons/CustomCells/DescriptionTableCell.xib
+++ b/Woopons/CustomCells/DescriptionTableCell.xib
@@ -44,8 +44,8 @@
                                 <rect key="frame" x="15" y="15" width="160" height="90"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AK" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="eNv-Ub-2nn">
-                                        <rect key="frame" x="72" y="35" width="16" height="20"/>
-                                        <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="12"/>
+                                        <rect key="frame" x="61.333333333333329" y="22" width="37.333333333333329" height="46"/>
+                                        <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="28"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
