--- a/Woopons/Storyboards/Base.lproj/Main.storyboard
+++ b/Woopons/Storyboards/Base.lproj/Main.storyboard
@@ -816,7 +816,7 @@
                                         <color key="textColor" name="primaryRed"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spend through WOO-PONS on" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GZH-nx-EtM">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Deals on" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GZH-nx-EtM">
                                         <rect key="frame" x="30" y="20" width="315" height="30"/>
                                         <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="18"/>
                                         <nil key="highlightedColor"/>
@@ -1013,9 +1013,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="1" width="430" height="932"/>
-        <image name="2" width="430" height="932"/>
-        <image name="3" width="430" height="932"/>
+        <image name="1" width="576" height="1024"/>
+        <image name="2" width="576" height="1024"/>
+        <image name="3" width="576" height="1024"/>
         <image name="close" width="32" height="32"/>
         <image name="eye.slash" catalog="system" width="128" height="84"/>
         <image name="splash" width="313" height="153"/>
